# just_plejd

./: LICENSE  README.md  commands.py  example.py  plejd.py  proto.py  pyproject.toml
src/just_plejd/: __init__.py  http_api.py  packet_parser.py  plejd.py
